changed the name

--- a/virtualhost.conf
+++ b/virtualhost.conf
@@ -1,13 +1,13 @@
 # create a virtual host file inside /etc/httpd/conf.d/
 
 cd /etc/httpd/conf.d/
-sudo vim raindev.io.conf
+sudo vim apps-crc.testing.conf
 
 <VirtualHost *:443>
-    ServerAdmin admin@depot.raindev.io
-    ServerName raindev.io
-    ServerAlias depot.raindev.io
-    DocumentRoot /var/www/raindev.io/public_html
+    ServerAdmin admin@depot.apps-crc.testing
+    ServerName developments.apps-crc.testing
+    ServerAlias developments.apps-crc.testing
+    DocumentRoot /var/www/apps-crc.testing/public_html
     ErrorLog /var/log/httpd/error_try.log
     CustomLog /var/log/httpd/access_try.log combined
     SSLCertificateFile "/etc/pki/tls/certs/server.crt"
